--- a/Front/sports-results/src/app/app.component.html
+++ b/Front/sports-results/src/app/app.component.html
@@ -1,1 +1,9 @@
-<p>Galit !!! smoking!!!!!!!!11</p>
+<div >
+
+    <i class="fas fa-h1">{{title}}</i>
+
+</div>
+
+<div>
+    <button (click)="go()">Click</button>
+</div>
