--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -1,28 +1,68 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+
 
 .flex-container{
   display: flex;
-  background-color:coral;
+  background:url(../../../assets/cover.jpg)no-repeat;
+  background-size:cover;
   justify-content:center;
 
   width:100%;
   height: 100%;
   position:absolute;
-  align-items:center;
+}
+
+header{
+  font-family:Roboto,sans-serif;
+  position:absolute;
+}
+
+header .logo{
+  color:#000;
+  font-size: 35px;
+  text-decoration: none;
+  font-weight: bold;
+  letter-spacing:1px;
+
 }
 
 
 .box{
-  display: flex;
+  display:flex;
   padding: 10px;
-  margin: 30px;
-  background-color:red;
+  margin: 20px;
+  margin-top: 40px;
+  background-color:bisque;
   width: 100px;
   height: 100px;
   align-items: center;
   justify-content: center;
 }
 
-.box-text{
+.box1{
+  display: block;
+  flex-grow:5;
+  height: 500px;
+}
 
+.box2{
+  flex-grow:2;
+  height: 500px;
+  width: 100px
+}
+.box3{
+  flex-grow:1;
+}
+
+.head{
+  display:flex;
+  justify-content: center;
+  background-color:black;
+  color:white;
+}
+
+.head1{
+  padding:5px;
+  text-align: center;
 }
