--- a/Front/sportLive/src/app/core/home-page/home-page.component.html
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.html
@@ -1,7 +1,29 @@
 
+
+
+
 <div class="flex-container">
-  <div class="box">1</div>
-  <div  class="box">2</div>
-  <div  class="box">3</div>
+  <header>
+    <h2><a href="#" class="logo">Sport Live</a></h2>
+  </header>
+
+  <div class="box box1">1</div>
+  <div  class="box box2">2</div>
+
+
+  <div  class="box box3">
+    <div class="dropdown">
+      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+        Choose Country
+      </a>
+
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <li><a class="dropdown-item" href="#">Action</a></li>
+        <li><a class="dropdown-item" href="#">Another action</a></li>
+        <li><a class="dropdown-item" href="#">Something else here</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
+
 
