--- a/Front/sportLive/src/app/core/home-page/home-page.component.html
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.html
@@ -7,8 +7,16 @@
     <h2><a href="#" class="logo">Sport Live</a></h2>
   </header>
 
-  <div class="box box1">1</div>
-  <div  class="box box2">2</div>
+  <div class="box box1">
+    <app-board></app-board>
+  </div>
+
+
+
+  <div  class="box box2">
+    2
+  </div>
+
 
 
   <div  class="box box3">
@@ -18,9 +26,9 @@
       </a>
 
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <li><a class="dropdown-item" href="#">Spain</a></li>
+        <li><a class="dropdown-item" href="#">England</a></li>
+        <li><a class="dropdown-item" href="#">Germany</a></li>
       </ul>
     </div>
   </div>
