--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -19,7 +19,7 @@ header{
 }
 
 header .logo{
-  color:#000;
+  color:#fff;
   font-size: 35px;
   text-decoration: none;
   font-weight: bold;
@@ -32,7 +32,7 @@ header .logo{
   display:flex;
   padding: 10px;
   margin: 20px;
-  margin-top: 40px;
+  margin-top: 60px;
   background-color:bisque;
   width: 100px;
   height: 100px;
@@ -41,7 +41,9 @@ header .logo{
 }
 
 .box1{
-  display: block;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
   flex-grow:5;
   height: 500px;
 }
