--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -16,6 +16,7 @@
 header{
   font-family:Roboto,sans-serif;
   position:absolute;
+  text-transform: uppercase;
 }
 
 header .logo{
@@ -24,9 +25,7 @@ header .logo{
   text-decoration: none;
   font-weight: bold;
   letter-spacing:1px;
-
 }
-
 
 .box{
   display:flex;
@@ -49,12 +48,18 @@ header .logo{
 }
 
 .box2{
+  display: flex;
+  justify-content: start;
+  flex-direction:column;
   flex-grow:2;
   height: 500px;
   width: 100px
 }
 .box3{
+  display: flex;
   flex-grow:1;
+  background-color:transparent;
+  border:solid black 3px;
 }
 
 .head{
