--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -37,6 +37,7 @@ header .logo{
   height: 100px;
   align-items: center;
   justify-content: center;
+  font-size: 20px
 }
 
 .box1{
@@ -44,7 +45,10 @@ header .logo{
   justify-content: start;
   flex-direction: column;
   flex-grow:5;
-  height: 500px;
+  height: 30em;
+  width:30em;
+  border: solid yellow 5px;
+  align-items: stretch;
 }
 
 .box2{
@@ -52,14 +56,17 @@ header .logo{
   justify-content: start;
   flex-direction:column;
   flex-grow:2;
-  height: 500px;
-  width: 100px
+  height: 30em;
+  width: 20em;
+  border:solid coral 6px;
 }
 .box3{
   display: flex;
   flex-grow:1;
   background-color:transparent;
   border:solid black 3px;
+  height: 15ex;
+  width: 12em
 }
 
 .head{
