--- a/Front/sportLive/src/app/core/components/board/board.component.html
+++ b/Front/sportLive/src/app/core/components/board/board.component.html
@@ -1,13 +1,11 @@
-<div class="flex-container">
-
-
+<div *ngFor="let i of game" class="flex-container bg-dark text-white">
   <div class=box>
-    <h3> {{Team1}}</h3>
+    <p> {{i.teamHome}}<p>
   </div>
   <div class=box>
     <h3>-------</h3>
   </div>
   <div class=box>
-    <h3>{{Team2}}</h3>
+    <p>{{i.teamAway}}<p>
   </div>
 </div>
