--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -7,9 +7,9 @@
   background:url(../../../assets/cover.jpg)no-repeat;
   background-size:cover;
   justify-content:center;
-
   width:100%;
   height: 100%;
+  overflow: auto;
   position:absolute;
 }
 
@@ -49,6 +49,8 @@ header .logo{
   width:30em;
   border: solid yellow 5px;
   align-items: stretch;
+  flex-basis: 200px;
+  overflow: auto;
 }
 
 .box2{
