--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -24,7 +24,8 @@ header .logo{
   font-size: 35px;
   text-decoration: none;
   font-weight: bold;
-  letter-spacing:1px;
+  letter-spacing:0.05em;
+  margin-right: auto;
 }
 
 .box{
