--- a/Front/sportLive/src/app/core/home-page/home-page.component.html
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.html
@@ -28,6 +28,7 @@
         <li><a class="dropdown-item" href="#">Germany</a></li>
       </ul>
     </div>
+    <button (click)="doGalit()">get</button>
   </div>
 </div>
 
