--- a/Front/sportLive/src/app/core/components/board/board.component.html
+++ b/Front/sportLive/src/app/core/components/board/board.component.html
@@ -1,11 +1,11 @@
-<div *ngFor="let i of game" class="flex-container bg-dark text-white">
+<div *ngFor="let i of games" class="flex-container bg-dark text-white">
   <div class=box>
-    <p> {{i.teamHome}}<p>
+    <p> {{i.Home}}<p>
   </div>
   <div class=box>
-    <h3>-------</h3>
+    <h3>{{i.Status}}</h3>
   </div>
   <div class=box>
-    <p>{{i.teamAway}}<p>
+    <p>{{i.Away}}<p>
   </div>
 </div>
