--- a/Front/sportLive/src/app/core/home-page/home-page.component.html
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 
 <div class="flex-container">
   <header>
-    <h2><a href="#" class="logo">Sport Live</a></h2>
+    <h2><a href="#" class="logo">Spanish leauge</a></h2>
   </header>
 
   <div class="box box1">
