--- a/Front/sportLive/src/app/core/home-page/home-page.component.html
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.html
@@ -7,29 +7,13 @@
     <h2><a href="#" class="logo">Spanish leauge</a></h2>
   </header>
 
-  <div class="box box1">
-    <app-board></app-board>
-  </div>
-
-
-
-  <div  class="box box2">
-    2
-  </div>
-
-  <div  class="box box3">
-    <div class="dropdown">
-      <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-        Choose Country
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" href="#">Spain</a></li>
-        <li><a class="dropdown-item" href="#">England</a></li>
-        <li><a class="dropdown-item" href="#">Germany</a></li>
-      </ul>
+  <div class="box ">
+    <div>
+      <app-board></app-board>
     </div>
-    <button (click)="doGalit()">get</button>
   </div>
+
+
 </div>
 
 
