--- a/Front/sportLive/src/app/core/components/board/board.component.css
+++ b/Front/sportLive/src/app/core/components/board/board.component.css
@@ -1,27 +1,33 @@
 .flex-container{
   display: flex;
   justify-content:center;
-  border: solid red 5px;
-  height: 4em;
+  border: solid white 5px;
+  height: 5em;
   align-items: stretch;
   border-radius: 10px;
-
+  margin: 1em;
 
 }
 
 .box {
+  display: flex;
   margin: 0.8em;
   text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 18px;
+
   font-family:'Courier New', Courier, monospace;
-  width:11em;
-  height: 2em;
-  border: solid blue 5px;
+  width:10vw;
+  height: 5vh;
+  border: solid white 5px;
   border-radius: 25px;
+  justify-content: center;
+
 
 }
-
+ .box p{
+  font-weight: bold;
+  font-size:18px;
+ }
 .noGames{
   text-align: center;
   font-size: 40px;
