--- a/Front/sportLive/src/app/core/home-page/home-page.component.css
+++ b/Front/sportLive/src/app/core/home-page/home-page.component.css
@@ -21,11 +21,12 @@ header{
 
 header .logo{
   color:#fff;
-  font-size: 35px;
+  font-size: 40px;
   text-decoration: none;
   font-weight: bold;
   letter-spacing:0.05em;
   margin-right: auto;
+
 }
 
 .box{
@@ -33,25 +34,29 @@ header .logo{
   padding: 10px;
   margin: 20px;
   margin-top: 60px;
-  background-color:bisque;
-  width: 100px;
-  height: 100px;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px
+  background-color:black;
+  width: 70em;
+  height: 80vh;
+
+  justify-content: start;
+  flex-direction: column;
+  border-radius: 25px;
+  color: white;
+  overflow: auto;
+  align-items: stretch;
 }
 
 .box1{
   display: flex;
   justify-content: start;
-  flex-direction: column;
+
   flex-grow:5;
-  height: 30em;
-  width:30em;
-  border: solid yellow 5px;
+
+  border: solid black 5px;
   align-items: stretch;
-  flex-basis: 200px;
   overflow: auto;
+
+
 }
 
 .box2{
